--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mime-types": "^2.1.17",
     "multer": "^1.3.0",
     "pad": "^2.0.3",
+    "rimraf": "^2.6.3",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
