--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "async-middleware": "^1.2.1",
     "content-disposition": "^0.5.2",
     "express": "^4.16.2",
+    "express-queue": "^0.0.12",
     "lodash": "^4.17.4",
     "mime-types": "^2.1.17",
     "multer": "^1.3.0",
