--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mime-types": "^2.1.17",
     "multer": "^1.3.0",
     "pad": "^2.0.3",
+    "ps-node": "^0.1.6",
     "rimraf": "^2.6.3",
     "uuid": "^3.1.0"
   },
